--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             Kakashi Hatake is a fictional character and one of the main protagonists in the Naruto manga and anime series created by Masashi Kishimoto.<br> In the story, <mark>Kakashi is the teacher of Team 7</mark>, consisting of the series' primary characters, <b> Naruto Uzumaki, Sasuke Uchiha, and Sakura Haruno.</b> 
         </h4>
         
-   <img src="./kakashi.jpg" width="300" height="300" align="right">
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS25p3Y5x_SP0sfcK8zcOk63zzt-bw1JGC0eA&usqp=CAU" width="300" height="300" align="right">
         <p>
          <h2>Biography:</h2>
           Kakashi graduated from the Ninja Academy and became a Genin, when he was merely 5 years old. He later became a Jounin and a member of the AnBu Assasination squad for Hidden Leaf Village. We see him as he takes up the role as being a sensei for the new Chunnins.</p>
@@ -23,6 +23,6 @@ Numerous anime and manga publications have praised and criticized Kakashi's char
 </p>
 <pre>"kakashi hatake is also known as copy Ninja"</pre>
     <p>  Kakashi had commitment issues of any sort, be it platonic or romantic. He had so because he lost his father at a tender age. That made him a cold person, a boy who believed love to be a burden. But it was his latter losses that made him “lazy” per say from a cold hearted one. <mark>Originally, Kakashi's primary weakness was his average reserves of chakra and stamina. He could only maintain his Sharingan for a short time, quickly tiring out from overusing it and ultimately collapsing if used too long, followed by great difficulty to even stand for days.<br>At the end of Naruto, Kakashi was around 31 years old, and he ended up becoming Hokage shortly after it. It can be safely assumed that Kakashi took over the position of Hokage around the age of 31- 32 years. He ruled as the Sixth Hokage for quite a long time and Konoha was the most peaceful under his reign.</mark>, Kakashi is the son of Sakumo Hatake, one of the most powerful shinobi Konoha ever produced, renowned throughout the ninja world as "White Fang of the Leaf". Kakashi was himself a child prodigy and, during the ninja academy years, was hailed as the best of his generation</p>
-    <img src="/kakashi1.jpg">
+    <img src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYWxuJmqO_81Ho22KdSkVCYW_nU-harfSN2g&usqp=CAU" width="1000" height="1000" >
 </body>
 </html>
